New header design: icons, app colors and edit text mode
• Move privacy grade to the left and tabs to the main toolbar
• New icons, colors and edit text behavior
• Update fire text in tab switcher to use new icon
• Remove unused resources

--- a/app/src/main/res/layout/content_tracker_networks.xml
+++ b/app/src/main/res/layout/content_tracker_networks.xml
@@ -43,7 +43,7 @@
                     android:id="@+id/networksBanner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:contentDescription="@string/privacyGradeContentDescription"
+                    android:contentDescription="@string/networksContentDescription"
                     android:paddingBottom="12dp"
                     android:paddingTop="20dp"
                     android:src="@drawable/networks_banner_good"
@@ -55,7 +55,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
-                    android:textColor="@color/almostBlack"
+                    android:textColor="@color/almostBlackDark"
                     android:textIsSelectable="true"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -96,7 +96,7 @@
                 android:paddingEnd="20dp"
                 android:paddingStart="20dp"
                 android:text="@string/networksOverview"
-                android:textColor="@color/almostBlack"
+                android:textColor="@color/almostBlackDark"
                 android:textSize="14sp"
                 android:textStyle="normal"
                 app:layout_constraintTop_toBottomOf="@id/networksBannerContainer" />
