--- a/app/src/main/res/drawable/ic_fire_gray_24dp.xml
+++ b/app/src/main/res/drawable/ic_fire_gray_24dp.xml
@@ -13,14 +13,13 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="16dp"
-    android:height="20dp"
-    android:viewportWidth="16"
-    android:viewportHeight="20">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M5.843,19.778c-1.12,-0.644 -1.921,-1.778 -1.968,-3.112 -0.068,-2.488 1.716,-3.71 2.769,-5.377C8.154,8.889 7.742,7.4 7.742,7.4s1.258,0.69 1.99,3.245c0.229,0.755 0.275,1.511 0.206,2.222 -0.115,1.8 -0.915,3.422 -0.915,3.422s1.395,-0.29 1.784,-2.755c0.64,0.644 1.235,1.578 1.304,2.555 0.114,1.689 -0.915,3.244 -2.47,3.911 2.699,-0.6 4.62,-2.822 5.284,-4.444 0.846,-2.045 0.617,-3.867 0.48,-5.445 -0.183,-2.155 0.595,-3.755 0.595,-3.755s-1.487,0.422 -2.585,2.178c-0.503,0.8 -0.71,1.977 -0.71,1.977s0.115,-1.044 -0.595,-2.955c-0.71,-1.867 -1.35,-2.533 -1.739,-3.912C9.869,1.8 10.991,0 10.991,0S6.55,0.8 4.537,4.556C2.754,7.889 3.486,9.889 3.486,9.889s-0.755,-0.69 -1.144,-1.644c-0.389,-0.956 -0.298,-1.822 -0.298,-1.822S-1.113,9.8 0.42,14.045c1.03,2.978 3.021,4.932 5.423,5.733z"
+      android:pathData="M9.573,23.744c-1.26,-0.74 -2.16,-2.044 -2.213,-3.578 -0.078,-2.862 1.93,-4.267 3.114,-6.184 1.7,-2.76 1.236,-4.472 1.236,-4.472s1.415,0.793 2.239,3.732c0.257,0.868 0.308,1.738 0.23,2.555 -0.128,2.07 -1.029,3.935 -1.029,3.935s1.57,-0.332 2.008,-3.168c0.72,0.74 1.39,1.815 1.467,2.939 0.129,1.941 -1.03,3.73 -2.78,4.497 3.037,-0.69 5.199,-3.245 5.946,-5.111 0.952,-2.351 0.694,-4.446 0.54,-6.261 -0.206,-2.479 0.669,-4.319 0.669,-4.319s-1.673,0.485 -2.908,2.505c-0.566,0.92 -0.799,2.274 -0.799,2.274s0.13,-1.2 -0.67,-3.4c-0.797,-2.145 -1.517,-2.912 -1.956,-4.497 -0.565,-2.12 0.697,-4.191 0.697,-4.191s-4.993,0.92 -7.258,5.239c-2.008,3.833 -1.184,6.133 -1.184,6.133s-0.85,-0.793 -1.287,-1.89c-0.437,-1.1 -0.335,-2.096 -0.335,-2.096s-3.552,3.885 -1.828,8.766c1.16,3.424 3.4,5.672 6.101,6.592z"
       android:fillColor="#AAA"
       android:fillType="evenOdd"/>
 </vector>
