--- a/app/src/main/res/drawable/ic_tabs_gray_24dp.xml
+++ b/app/src/main/res/drawable/ic_tabs_gray_24dp.xml
@@ -15,12 +15,12 @@
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
-    android:height="20dp"
-    android:viewportWidth="20"
-    android:viewportHeight="20">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M17.922,0A2.08,2.08 0,0 1,20 2.078v10.39a2.08,2.08 0,0 1,-2.078 2.077h-0.787a1.037,1.037 0,0 1,-1.038 -1.039,1.04 1.04,0 0,1 1.046,-1.039h0.78l-0.002,-10.39 -10.389,0.002v0.77a1.036,1.036 0,0 1,-1.039 1.054,1.039 1.039,0 0,1 -1.039,-1.046v-0.78A2.08,2.08 0,0 1,7.532 0h10.39zM12.468,5.455L2.078,5.455A2.08,2.08 0,0 0,0 7.533v10.39A2.08,2.08 0,0 0,2.078 20h10.39a2.08,2.08 0,0 0,2.078 -2.078L14.546,7.532a2.08,2.08 0,0 0,-2.078 -2.077z"
+      android:pathData="M16.712,5.17H7.945V3.385H20.63V14.98h-1.885V7.213c0,-1.128 -0.91,-2.042 -2.032,-2.042zM23,2.193C23,1.536 22.467,1 21.815,1H6.907c-0.025,0 -0.047,0.013 -0.074,0.015 -0.025,0 -0.048,-0.015 -0.074,-0.015 -0.652,0 -1.185,0.536 -1.185,1.192V5.17H3.033A2.037,2.037 0,0 0,1 7.213v13.744C1,22.085 1.91,23 3.033,23h13.679a2.038,2.038 0,0 0,2.032 -2.043v-3.592h3.07c0.653,0 1.186,-0.536 1.186,-1.192 0,-0.027 -0.013,-0.048 -0.014,-0.075 0,-0.025 0.014,-0.048 0.014,-0.074V2.192z"
       android:fillColor="#AAA"
       android:fillType="evenOdd"/>
 </vector>
