--- a/app/src/main/res/layout/content_onboarding_default_browser.xml
+++ b/app/src/main/res/layout/content_onboarding_default_browser.xml
@@ -21,49 +21,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingEnd="44dp"
-    android:tag="onboardingProtect"
     android:paddingStart="44dp"
-    tools:background="@color/lightOliveGreen"
+    android:tag="onboardingDefaultBrowser"
+    tools:background="@color/eastBay"
     tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivity">
 
     <ImageView
-        android:id="@+id/protectDataImage"
+        android:id="@+id/defaultBrowserImage"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:importantForAccessibility="no"
         android:paddingTop="20dp"
-        android:src="@drawable/onboarding_image_protect_data"
-        app:layout_constraintBottom_toTopOf="@id/textContainer"
+        android:src="@drawable/onboarding_image_default_browser"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/textContainer"
         app:layout_constraintVertical_bias="0.5" />
 
     <LinearLayout
         android:id="@+id/textContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:gravity="center"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/continueButton"
-        app:layout_constraintTop_toBottomOf="@id/noTraceImage">
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/launchSettingsButton"
+        app:layout_constraintTop_toBottomOf="@id/defaultBrowserImage">
 
         <TextView
             style="@style/OnboardingTextTitle"
-            android:text="@string/onboardingProtectDataTitle" />
+            android:text="@string/onboardingDefaultBrowserTitle" />
+
 
         <TextView
             style="@style/OnboardingTextSubtitle"
-            android:text="@string/onboardingProtectDataDescription" />
+            android:text="@string/onboardingDefaultBrowserDescription" />
+
 
     </LinearLayout>
 
     <Button
+        android:id="@+id/launchSettingsButton"
+        style="@style/OnboardingButtonDefaultBrowserLaunchSettings"
+        app:layout_constraintBottom_toTopOf="@+id/continueButton"
+        android:text="@string/onboardingDefaultBrowserGoToSettingsAction"
+        android:onClick="onLaunchDefaultBrowserSettingsClicked"
+        android:theme="@style/OnboardingButtonDefaultBrowserLaunchSettings" />
+
+    <Button
         android:id="@+id/continueButton"
-        style="@style/OnboardingButtonProtectData"
+        style="@style/OnboardingButtonDefaultBrowser"
         android:onClick="onContinueClicked"
-        android:theme="@style/OnboardingButtonProtectData" />
+        android:theme="@style/OnboardingButtonDefaultBrowser" />
 
 </android.support.constraint.ConstraintLayout>
