--- a/app/src/main/res/layout/content_onboarding_no_trace.xml
+++ b/app/src/main/res/layout/content_onboarding_no_trace.xml
@@ -22,6 +22,7 @@
     android:layout_height="match_parent"
     android:paddingEnd="44dp"
     android:paddingStart="44dp"
+    android:tag="onboardingNoTrace"
     tools:background="@color/powderBlue"
     tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivity">
 
@@ -68,7 +69,7 @@
     <Button
         android:id="@+id/continueButton"
         style="@style/OnboardingButtonNoTrace"
-        android:onClick="onDoneClicked"
+        android:onClick="onContinueClicked"
         android:theme="@style/OnboardingButtonNoTrace" />
 
 </android.support.constraint.ConstraintLayout>
