--- a/app/src/main/res/layout/item_tab.xml
+++ b/app/src/main/res/layout/item_tab.xml
@@ -53,14 +53,14 @@
     <ImageView
         android:id="@+id/close"
         android:layout_width="62dp"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:contentDescription="@string/closeContentDescription"
         android:scaleType="center"
         android:background="?selectableItemBackground"
         android:src="@drawable/ic_close_white_24dp"
         android:tint="@color/grayish"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
