--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2017 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,156 +14,80 @@
   ~ limitations under the License.
   -->
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_scrollFlags="scroll|enterAlways"
-    android:fitsSystemWindows="true"
-    tools:context="com.duckduckgo.app.browser.BrowserActivity"
-    tools:menu="menu_browser_activity">
+    android:animateLayoutChanges="true"
+    app:layout_scrollFlags="scroll|enterAlways">
 
-    <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/rootView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <include layout="@layout/include_omnibar_toolbar" />
 
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/logoParent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="?attr/actionBarSize"
-            android:animateLayoutChanges="true">
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/logoParent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="com.duckduckgo.app.browser.BrowserActivity"
+        tools:menu="menu_browser_activity">
 
-            <ImageView
-                android:id="@+id/ddgLogo"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:contentDescription="@string/duckDuckGoLogoDescription"
-                android:src="@drawable/full_logo"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_max="180dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.5"
-                app:layout_constraintWidth_max="180dp" />
+        <ImageView
+            android:id="@+id/ddgLogo"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:contentDescription="@string/duckDuckGoLogoDescription"
+            android:src="@drawable/full_logo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_max="180dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5"
+            app:layout_constraintWidth_max="180dp" />
 
-        </android.support.constraint.ConstraintLayout>
+        <FrameLayout
+            android:id="@+id/webViewContainer"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/bannerNotification"
+            tools:background="#4F00" />
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appBarLayout"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:fitsSystemWindows="true"
-            android:theme="@style/AppTheme.AppBarOverlay"
-            app:layout_scrollFlags="scroll|enterAlways">
+        <include
+            layout="@layout/include_banner_notification"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_scrollFlags="scroll|enterAlways">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/autoCompleteSuggestionsList"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:backgroundTint="@color/colorPrimary"
+            android:clipToPadding="false"
+            android:paddingBottom="14dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_autocomplete_suggestion"
+            tools:visibility="gone" />
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="0dp"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="@color/colorPrimary"
-                    app:contentInsetEnd="0dp"
-                    app:contentInsetStart="0dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_scrollFlags="scroll|enterAlways"
-                    app:popupTheme="@style/AppTheme.PopupOverlay">
-
-                    <android.support.constraint.ConstraintLayout
-                        android:id="@+id/omniBarContainer"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/omnibar_editing_background"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:paddingStart="6dp"
-                        android:paddingEnd="6dp">
-
-                        <ImageButton
-                            android:id="@+id/privacyGradeButton"
-                            android:contentDescription="@string/privacyGradeContentDescription"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="?attr/selectableItemBackgroundBorderless"
-                            android:src="@drawable/privacygrade_icon_a"
-                            android:padding="4dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <com.duckduckgo.app.browser.omnibar.KeyboardAwareEditText
-                            android:id="@+id/omnibarTextInput"
-                            style="@style/Base.V7.Widget.AppCompat.EditText"
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginStart="8dp"
-                            android:background="@android:color/transparent"
-                            android:fontFamily="sans-serif-medium"
-                            android:hint="@string/omnibarInputHint"
-                            android:imeOptions="flagNoExtractUi|actionGo|flagNoPersonalizedLearning"
-                            android:inputType="textUri|textNoSuggestions"
-                            android:maxLines="1"
-                            android:selectAllOnFocus="true"
-                            android:textColor="@color/white"
-                            android:textSize="13sp"
-                            android:textStyle="normal"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toStartOf="@id/clearTextButton"
-                            app:layout_constraintStart_toEndOf="@id/privacyGradeButton"
-                            tools:text="https://duckduckgo.com/?q=areallylongexampleexample" />
-                        
-                        <ImageView
-                            android:padding="3dp"
-                            android:id="@+id/clearTextButton"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="?selectableItemBackground"
-                            android:contentDescription="@string/clearButtonContentDescription"
-                            android:src="@drawable/ic_close_white_24dp"
-                            android:tint="@color/grayish"
-                            android:visibility="gone"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            tools:visibility="visible" />
-
-                    </android.support.constraint.ConstraintLayout>
-
-                </android.support.v7.widget.Toolbar>
-
-                <ProgressBar
-                    android:id="@+id/pageLoadingIndicator"
-                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="4dp"
-                    android:visibility="invisible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:progress="50"
-                    tools:visibility="visible" />
-
-            </android.support.constraint.ConstraintLayout>
-
-        </android.support.design.widget.AppBarLayout>
+        <FrameLayout
+            android:id="@+id/webViewFullScreenContainer"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/windowBackground"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/focusDummy"
@@ -172,41 +95,5 @@
             android:layout_height="match_parent"
             android:focusableInTouchMode="true" />
 
-        <FrameLayout
-            android:id="@+id/webViewContainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/autoCompleteSuggestionsList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:backgroundTint="@color/colorPrimary"
-            android:clipToPadding="false"
-            android:paddingBottom="14dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:visibility="gone" />
-
-    </android.support.design.widget.CoordinatorLayout>
-
-    <include
-        layout="@layout/include_find_in_page"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:visibility="gone" />
-
-    <FrameLayout
-        android:id="@+id/webViewFullScreenContainer"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/windowBackground"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</android.support.constraint.ConstraintLayout>
-
+    </android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
