--- a/app/src/main/res/layout/include_duckduckgo_browser_webview.xml
+++ b/app/src/main/res/layout/include_duckduckgo_browser_webview.xml
@@ -16,6 +16,7 @@
 
 <com.duckduckgo.app.browser.DuckDuckGoWebView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/browserWebView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -23,6 +24,7 @@
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:scrollbarSize="4dp"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:scrollbarStyle="outsideInset"
     android:scrollbarThumbHorizontal="@color/webViewScrollbarThumbColor"
     android:scrollbarThumbVertical="@color/webViewScrollbarThumbColor"
