--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,7 +29,9 @@
     <color name="brickOrange">#d03a10</color>
 
     <color name="powderBlue">#50BFFF</color>
+    <color name="powderBlue2">#B2D6F3</color>
     <color name="windowsBlue">#3c90c0</color>
+    <color name="softBlue">#66afe9</color>
 
     <color name="lightOliveGreen">#93c04d</color>
     <color name="muddyGreen">#58732e</color>
