--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2018 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -20,4 +19,7 @@
     <dimen name="onboardingButtonPadding">30dp</dimen>
     <dimen name="onboardingTitleTextSize">32sp</dimen>
     <dimen name="onboardingSubtitleTextSize">20sp</dimen>
+    <dimen name="defaultBrowserInfoTitleTextSize">30sp</dimen>
+    <dimen name="defaultBrowserInfoDescriptionTextSize">20sp</dimen>
+    <dimen name="defaultBrowserInfoSettingsButtonTextSize">20sp</dimen>
 </resources>
